--- a/src/main/resources/com/openjfx/qllspahg/fxml/NhanVien.fxml
+++ b/src/main/resources/com/openjfx/qllspahg/fxml/NhanVien.fxml
@@ -193,7 +193,7 @@
                                         <HBox alignment="CENTER" spacing="10.0">
                                             <children>
                                                 <Label text="Chức vụ: " />
-                                                <ComboBox fx:id="cbxChucVuTTNhanVien" prefHeight="26.0" prefWidth="125.0" />
+                                                <ComboBox fx:id="cbxChucVuTTNhanVien" prefHeight="26.0" prefWidth="193.0" />
                                             </children>
                                             <padding>
                                                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -222,9 +222,18 @@
                                         </HBox>
                                     </children>
                                 </HBox>
+                        <HBox alignment="CENTER_LEFT" spacing="10.0">
+                           <children>
+                              <Label text="Lương cơ bản:" />
+                              <TextField fx:id="tfLuongCoBanTTNhanVien" prefHeight="26.0" prefWidth="188.0" />
+                           </children>
+                           <padding>
+                              <Insets left="5.0" />
+                           </padding>
+                        </HBox>
                                 <HBox alignment="CENTER" spacing="120.0">
                                     <children>
-                                        <Button fx:id="btnThemTTNhanVien" mnemonicParsing="false" prefHeight="30.0" prefWidth="94.0" text="Thêm">
+                                        <Button fx:id="btnThemTTNhanVien" mnemonicParsing="false" onAction="#themTTNhanVien" prefHeight="30.0" prefWidth="94.0" text="Thêm">
                                             <graphic>
                                                 <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                                                     <image>
@@ -284,7 +293,7 @@
                     <bottom>
                         <HBox alignment="CENTER_RIGHT" fillHeight="false" spacing="20.0" BorderPane.alignment="CENTER">
                             <children>
-                                <Button fx:id="btnResetTTNhanVien" mnemonicParsing="false" prefHeight="30.0" prefWidth="94.0" text="Reset">
+                                <Button fx:id="btnResetTTNhanVien" mnemonicParsing="false" onAction="#resetBangTTNhanVien" prefHeight="30.0" prefWidth="94.0" text="Reset">
                                     <graphic>
                                         <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                                             <image>
@@ -294,6 +303,94 @@
                                     </graphic>
                                 </Button>
                                 <Button fx:id="btnLuuTTNhanVien" mnemonicParsing="false" prefHeight="30.0" prefWidth="94.0" text="Lưu">
+                                    <graphic>
+                                        <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
+                                            <image>
+                                                <Image url="@../images/icons/save.png" />
+                                            </image>
+                                        </ImageView>
+                                    </graphic>
+                                </Button>
+                            </children>
+                            <padding>
+                                <Insets bottom="5.0" left="5.0" right="20.0" top="10.0" />
+                            </padding>
+                        </HBox>
+                    </bottom>
+                </BorderPane>
+            </content>
+        </Tab>
+        <Tab text="Quản lý phòng ban">
+            <content>
+                <BorderPane>
+                    <center>
+                        <ScrollPane fitToHeight="true" fitToWidth="true">
+                            <content>
+                                <TableView editable="true">
+                                    <columns>
+                                        <TableColumn prefWidth="45.600007593631744" text="STT" />
+                                        <TableColumn minWidth="-1.0" prefWidth="88.79998016357422" text="Chọn" />
+                                        <TableColumn minWidth="-1.0" prefWidth="149.6000213623047" text="Phòng ban hiện tại" />
+                                        <TableColumn minWidth="-1.0" prefWidth="124.0" text="Mã nhân viên" />
+                                        <TableColumn minWidth="-1.0" prefWidth="122.40005493164062" text="Tên nhân viên" />
+                                        <TableColumn minWidth="-1.0" prefWidth="79.99993896484375" text="Giới tính" />
+                                        <TableColumn minWidth="-1.0" prefWidth="180.00006103515625" text="Chức vụ" />
+                                        <TableColumn minWidth="-1.0" prefWidth="172.79998779296875" text="Phòng ban chuyển đến" />
+                                    </columns>
+                                </TableView>
+                            </content>
+                        </ScrollPane>
+                    </center>
+                    <top>
+                        <VBox BorderPane.alignment="CENTER">
+                            <children>
+                                <HBox alignment="CENTER_LEFT" spacing="20.0">
+                                    <children>
+                                        <HBox alignment="CENTER" spacing="10.0">
+                                            <children>
+                                                <Label text="Phòng ban:" />
+                                                <ComboBox prefHeight="26.0" prefWidth="146.0" />
+                                            </children>
+                                            <padding>
+                                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                            </padding>
+                                        </HBox>
+                                        <Button mnemonicParsing="false" text="Lấy dữ liệu ">
+                                            <HBox.margin>
+                                                <Insets />
+                                            </HBox.margin>
+                                        </Button>
+                                        <HBox alignment="CENTER" spacing="10.0">
+                                            <children>
+                                                <Label text="Chuyển đến:" />
+                                                <ComboBox prefHeight="26.0" prefWidth="125.0" />
+                                                <Button mnemonicParsing="false" text="Chuyển" />
+                                            </children>
+                                            <padding>
+                                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                            </padding>
+                                        </HBox>
+                                    </children>
+                                    <padding>
+                                        <Insets bottom="5.0" left="10.0" right="10.0" top="10.0" />
+                                    </padding>
+                                </HBox>
+                            </children>
+                        </VBox>
+                    </top>
+                    <bottom>
+                        <HBox alignment="CENTER_RIGHT" fillHeight="false" spacing="20.0" BorderPane.alignment="CENTER">
+                            <children>
+                                <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="94.0" text="Reset">
+                                    <graphic>
+                                        <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
+                                            <image>
+                                                <Image url="@../images/icons/reset-removebg-preview.png" />
+                                            </image>
+                                        </ImageView>
+                                    </graphic>
+                                </Button>
+                                <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="94.0" text="Lưu">
                                     <graphic>
                                         <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                                             <image>
