--- a/src/main/resources/com/openjfx/qllspahg/fxml/CongNhan.fxml
+++ b/src/main/resources/com/openjfx/qllspahg/fxml/CongNhan.fxml
@@ -124,7 +124,7 @@
                         <HBox alignment="CENTER_LEFT" spacing="10.0">
                            <children>
                               <Label text="Mã số công nhân" />
-                              <TextField fx:id="tfMaTTNhanVien" disable="true" editable="false" prefHeight="26.0" prefWidth="210.0" />
+                              <TextField disable="true" editable="false" prefHeight="26.0" prefWidth="210.0" />
                            </children>
                            <padding>
                               <Insets left="5.0" />
@@ -133,7 +133,7 @@
                         <HBox alignment="CENTER_LEFT" spacing="10.0">
                            <children>
                               <Label text="Tên công nhân" />
-                              <TextField fx:id="tfTenTTNhanVien" prefHeight="26.0" prefWidth="227.0" />
+                              <TextField prefHeight="26.0" prefWidth="227.0" />
                            </children>
                            <padding>
                               <Insets left="5.0" right="5.0" />
@@ -156,7 +156,7 @@
                               <HBox alignment="CENTER" spacing="10.0">
                                  <children>
                                     <Label text="Ngày sinh: " />
-                                    <DatePicker fx:id="datepickNgaySinhTTNhanVien" />
+                                    <DatePicker />
                                  </children>
                                  <padding>
                                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -167,7 +167,7 @@
                         <HBox alignment="CENTER_LEFT" spacing="10.0">
                            <children>
                               <Label text="Số điện thoại: " />
-                              <TextField fx:id="tfSoDienThoaiTTNhanVien" prefHeight="26.0" prefWidth="172.0">
+                              <TextField prefHeight="26.0" prefWidth="172.0">
                                  <HBox.margin>
                                     <Insets />
                                  </HBox.margin>
@@ -180,7 +180,7 @@
                         <HBox alignment="CENTER_LEFT" spacing="10.0">
                            <children>
                               <Label text="Email: " />
-                              <TextField fx:id="tfEmailTTNhanVien" prefHeight="26.0" prefWidth="214.0" />
+                              <TextField prefHeight="26.0" prefWidth="214.0" />
                            </children>
                            <padding>
                               <Insets left="5.0" right="5.0" />
@@ -189,7 +189,7 @@
                         <HBox alignment="CENTER_LEFT" spacing="10.0">
                            <children>
                               <Label text="Số tài khoản: " />
-                              <TextField fx:id="tfSoTaiKhoanTTNhanVien" alignment="BASELINE_LEFT" prefHeight="26.0" prefWidth="175.0" />
+                              <TextField alignment="BASELINE_LEFT" prefHeight="26.0" prefWidth="175.0" />
                            </children>
                            <padding>
                               <Insets left="5.0" right="5.0" />
@@ -198,7 +198,7 @@
                         <HBox alignment="CENTER_LEFT" spacing="10.0">
                            <children>
                               <Label text="Tổ" />
-                              <ComboBox fx:id="cbxPhongBanTTNhanVien" prefHeight="26.0" prefWidth="183.0" />
+                              <ComboBox prefHeight="26.0" prefWidth="183.0" />
                            </children>
                            <padding>
                               <Insets left="5.0" right="5.0" />
@@ -207,7 +207,7 @@
                         <HBox alignment="CENTER_LEFT" spacing="10.0">
                            <children>
                               <Label text="Phụ cấp" />
-                              <ComboBox fx:id="cbxPhuCapTTNhanVien" prefWidth="150.0" />
+                              <ComboBox prefWidth="150.0" />
                            </children>
                            <padding>
                               <Insets left="5.0" />
@@ -218,7 +218,7 @@
                               <HBox alignment="CENTER" spacing="10.0">
                                  <children>
                                     <Label text="Vai tró" />
-                                    <ComboBox fx:id="cbxChucVuTTNhanVien" prefHeight="26.0" prefWidth="193.0" />
+                                    <ComboBox prefHeight="26.0" prefWidth="193.0" />
                                  </children>
                                  <padding>
                                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -235,7 +235,7 @@
                               <HBox alignment="CENTER" spacing="5.0">
                                  <children>
                                     <Label text="Ngày vào làm: " />
-                                    <DatePicker fx:id="datepickNgayVaoLamTTNhanVien" HBox.hgrow="ALWAYS" />
+                                    <DatePicker HBox.hgrow="ALWAYS" />
                                  </children>
                                  <padding>
                                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -245,7 +245,7 @@
                         </HBox>
                         <HBox alignment="CENTER" spacing="120.0">
                            <children>
-                              <Button fx:id="btnThemTTNhanVien" mnemonicParsing="false" prefHeight="30.0" prefWidth="94.0" text="Thêm">
+                              <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="94.0" text="Thêm">
                                  <graphic>
                                     <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
@@ -254,7 +254,7 @@
                                     </ImageView>
                                  </graphic>
                               </Button>
-                              <Button fx:id="btnLamMoiTTNhanVien" mnemonicParsing="false" prefHeight="30.0" prefWidth="94.0" text="Làm mới">
+                              <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="94.0" text="Làm mới">
                                  <graphic>
                                     <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
@@ -282,7 +282,7 @@
                                     </ImageView>
                                  </graphic>
                               </Button>
-                              <Button fx:id="btnXoaTTNhanVien" mnemonicParsing="false" prefHeight="30.0" prefWidth="94.0" text="Xóa">
+                              <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="94.0" text="Xóa">
                                  <graphic>
                                     <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
@@ -468,11 +468,11 @@
                      <items>
                         <SplitPane dividerPositions="0.5, 0.5" maxHeight="200.0">
                            <items>
-                              <TableView fx:id="tblViewTTSanPhamPhanCongCongNhan" maxWidth="-Infinity" minWidth="-Infinity">
+                              <TableView fx:id="tblViewTTSanPhamPhanCongCongNhan" maxWidth="-Infinity" minWidth="-Infinity" onMouseClicked="#chonROWTTChiTietSanPham">
                                 <columns>
                                     <TableColumn fx:id="colMaSanPhamPhanCongCongNhan1" prefWidth="125.59996949434299" text="Mã sản phẩm" />
-                                  <TableColumn fx:id="colMaSanPhamPhanCongCongNhan" prefWidth="128.80001831054688" text="Tên sản phẩm" />
-                                  <TableColumn fx:id="colTenSanPhamPhanCongCongNhan" prefWidth="110.4000183105469" text="Số lượng làm" />
+                                  <TableColumn fx:id="colTenSanPhamPhanCongCongNhan" prefWidth="128.80001831054688" text="Tên sản phẩm" />
+                                  <TableColumn fx:id="colSLSanPhamPhanCongCongNhan" prefWidth="110.4000183105469" text="Số lượng làm" />
                                 </columns>
                               </TableView>
                               <TableView fx:id="tblViewTTCongDoanPhanCongCongNhan" maxWidth="-Infinity" minWidth="-Infinity">
@@ -529,21 +529,23 @@
                               <TableView fx:id="tblViewTTPhanCongTungCongNhan" maxWidth="-Infinity" minWidth="-Infinity">
                                 <columns>
                                   <TableColumn fx:id="colMaChamCongTTPhanCongTungCongNhan" prefWidth="133.599969494343" text="Mã chấm công" />
-                                  <TableColumn fx:id="colNgayPhamCongChamCongTTPhanCongTungCongNhan" minWidth="0.0" prefWidth="150.4000244140625" text="Ngày phân công" />
-                                    <TableColumn fx:id="colTenSanPhamTTPhanCongTungCongNhan" prefWidth="133.599969494343" text="Tên sản phẩm" />
-                                    <TableColumn fx:id="colTenCongDoanTTPhanCongTungCongNhan" prefWidth="107.99993896484375" text="Tên công đoạn" />
-                                    <TableColumn fx:id="colToTTPhanCongTungCongNhan" prefWidth="72.79998779296875" text="Tổ" />
-                                    <TableColumn fx:id="colHovaTenTTPhanCongTungCongNhan" prefWidth="131.2000732421875" text="Họ và tên" />
-                                    <TableColumn fx:id="colSoLuongLamTTPhanCongTungCongNhan" prefWidth="123.20001220703125" text="Số lượng làm" />
-                                    <TableColumn fx:id="colNgayKetThucTTPhanCongTungCongNhan" prefWidth="123.20001220703125" text="Ngày kết thúc" />
+                                  <TableColumn fx:id="colNgayPhamCongChamCongTTPhanCongTungCongNhan" minWidth="0.0" prefWidth="140.00009155273438" text="Ngày phân công" />
+                                    <TableColumn fx:id="colTenSanPhamTTPhanCongTungCongNhan" prefWidth="116.79998779296875" text="Tên sản phẩm" />
+                                    <TableColumn fx:id="colTenCongDoanTTPhanCongTungCongNhan" prefWidth="117.5999755859375" text="Tên công đoạn" />
+                                    <TableColumn fx:id="colToTTPhanCongTungCongNhan" prefWidth="76.800048828125" text="Tổ" />
+                                    <TableColumn fx:id="colHovaTenTTPhanCongTungCongNhan" prefWidth="113.5999755859375" text="Họ và tên" />
+                                    <TableColumn fx:id="colSoLuongLamTTPhanCongTungCongNhan" prefWidth="140.0" text="Số lượng làm" />
+                                    <TableColumn fx:id="colNgayKetThucTTPhanCongTungCongNhan" prefWidth="122.4000244140625" text="Ngày kết thúc" />
                                 </columns>
                               </TableView>
                               <TableView fx:id="tblViewTTPhanCongToCongNhan">
                                 <columns>
                                   <TableColumn fx:id="colNgayPhanCongTTPhanCongToCongNhan" prefWidth="110.39990081787073" text="Ngày phân công" />
                                   <TableColumn fx:id="colToTTPhanCongToCongNhan" prefWidth="64.80005645751953" text="Tổ" />
-                                    <TableColumn fx:id="colTongSoLuongLamTTPhanCongToCongNhan" prefWidth="216.0" text="Tổng số lượng đã phân công cho tổ" />
-                                    <TableColumn fx:id="colNgayKetThucTTPhanCongToCongNhan" prefWidth="104.7999267578125" text="Ngày kết thúc" />
+                                    <TableColumn fx:id="colSanPhamTTPhanCongToCongNhan11" prefWidth="84.800048828125" text="Sản phẩm " />
+                                    <TableColumn fx:id="colCongDoanTTPhanCongToCongNhan" prefWidth="106.39990234375" text="Công đoạn" />
+                                    <TableColumn fx:id="colTongSoLuongLamTTPhanCongToCongNhan" prefWidth="175.2000732421875" text="Tổng số lượng đã phân công" />
+                                    <TableColumn fx:id="colNgayKetThucTTPhanCongToCongNhan" prefWidth="143.9998779296875" text="Ngày kết thúc" />
                                 </columns>
                               </TableView>
                            </items>
