--- a/src/main/resources/com/openjfx/qllspahg/fxml/CongNhan/QuanLyCongNhan.fxml
+++ b/src/main/resources/com/openjfx/qllspahg/fxml/CongNhan/QuanLyCongNhan.fxml
@@ -23,13 +23,13 @@
                 <items>
                     <ScrollPane fitToHeight="true" fitToWidth="true">
                         <content>
-                            <TableView fx:id="tblViewTTCongNhan" editable="true" prefHeight="300.0">
+                            <TableView fx:id="tblViewTTCongNhan" editable="true" onMouseClicked="#chonROWTTCongNhan" prefHeight="300.0">
                                 <columns>
                                     <TableColumn fx:id="colMaTTCongNhan" prefWidth="133.60003048181534" text="Mã công nhân" />
                                     <TableColumn fx:id="colHoTTCongNhan" minWidth="-1.0" prefWidth="81.59994506835938" text="Họ" />
                                     <TableColumn fx:id="colTenTTCongNhan" minWidth="-1.0" prefWidth="257.6000061035156" text="Tên" />
                                     <TableColumn fx:id="colGioiTinhTTCongNhan" minWidth="-1.0" prefWidth="75.199951171875" text="Giới tính" />
-                                    <TableColumn fx:id="colChucVuTTCongNhan" minWidth="-1.0" prefWidth="143.20001220703125" text="Chức vụ" />
+                                    <TableColumn fx:id="colChucVuTTCongNhan" minWidth="-1.0" prefWidth="143.20001220703125" text="Vai trò " />
                                     <TableColumn fx:id="colToSanXuatTTCongNhan" minWidth="-1.0" prefWidth="166.4000244140625" text="Tổ sản xuất" />
                                 </columns>
                             </TableView>
@@ -37,19 +37,19 @@
                     </ScrollPane>
                     <ScrollPane fitToHeight="true" fitToWidth="true">
                         <content>
-                            <TableView fx:id="tblViewChiTietTTCongNhan" editable="true" prefHeight="300.0" tableMenuButtonVisible="true">
+                            <TableView fx:id="tblViewChiTietTTCongNhan" editable="true" onMouseClicked="#chonROWChiTiteTTCongNhan" prefHeight="300.0">
                                 <columns>
                                     <TableColumn fx:id="colMaChiTietTTCongNhan" prefWidth="96.80001217126846" text="Mã công nhân" />
-                                    <TableColumn fx:id="colHovaTenChiTietTTCongNhan" minWidth="-1.0" prefWidth="93.60000610351562" text="Họ và tên" />
-                        <TableColumn fx:id="colNgaySinhTTChiTietCongNhan" minWidth="-1.0" prefWidth="93.60000610351562" text="Ngày sinh" />
+                                    <TableColumn fx:id="colHovaTenChiTietTTCongNhan" minWidth="-1.0" prefWidth="150.0" text="Họ và tên" />
+                        <TableColumn fx:id="colNgaySinhTTChiTietCongNhan" minWidth="-1.0" prefWidth="85.60003662109375" text="Ngày sinh" />
                                     <TableColumn fx:id="colGioiTinhTTChiTietCongNhan" minWidth="-1.0" prefWidth="64.0" text="Giới tính" />
                                     <TableColumn fx:id="colNgayVaoLamTTChiTietCongNha" minWidth="-1.0" prefWidth="98.4000244140625" text="Ngày vào làm" />
                                     <TableColumn fx:id="colSoDienThoaiChiTieTTTCongNhan" minWidth="-1.0" prefWidth="108.00006103515625" text="Số điện thoại" />
-                                    <TableColumn fx:id="colEmailChiTietTTCongNhan" minWidth="-1.0" prefWidth="62.39996337890625" text="Email" />
-                                    <TableColumn fx:id="colSoTaiKhoanChiTietTTCongNhan" minWidth="-1.0" prefWidth="97.5999755859375" text="Só tài khoản" />
+                                    <TableColumn fx:id="colEmailChiTietTTCongNhan" minWidth="-1.0" prefWidth="120.0" text="Email" />
+                                    <TableColumn fx:id="colSoTaiKhoanChiTietTTCongNhan" minWidth="-1.0" prefWidth="100.0" text="Só tài khoản" />
                                     <TableColumn fx:id="colToSanXuatTTChiTietCongNhan" minWidth="-1.0" prefWidth="84.79998779296875" text="Tổ sản xuất" />
-                                    <TableColumn fx:id="colChucVuChiTietTTCongNhan" minWidth="-1.0" prefWidth="64.0" text="Chức vụ" />
-                                    <TableColumn fx:id="colPhuCapChiTietTTCongNhan" minWidth="-1.0" prefWidth="85.5999755859375" text="Phụ cấp" />
+                                    <TableColumn fx:id="colChucVuChiTietTTCongNhan" minWidth="-1.0" prefWidth="90.0" text="Vai trò" />
+                                    <TableColumn fx:id="colPhuCapChiTietTTCongNhan" minWidth="-1.0" prefWidth="100.0" text="Phụ cấp" />
                                 </columns>
                             </TableView>
                         </content>
@@ -87,7 +87,7 @@
                             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                         </padding>
                     </HBox>
-                    <Button fx:id="btnLayDuLieuTTCongNhan" mnemonicParsing="false" text="Lấy dữ liệu ">
+                    <Button fx:id="btnLayDuLieuTTCongNhan" mnemonicParsing="false" onAction="#layDuLieuTTCongNhan" text="Lấy dữ liệu ">
                         <HBox.margin>
                             <Insets />
                         </HBox.margin>
@@ -192,7 +192,7 @@
             <HBox alignment="CENTER_LEFT" spacing="10.0">
                <children>
                   <Label text="Phụ cấp" />
-                  <ComboBox fx:id="tfPhuCapTTCongNhan" prefWidth="150.0" />
+                  <ComboBox fx:id="cbxPhuCapTTCongNhan" prefWidth="150.0" />
                </children>
                <padding>
                   <Insets left="5.0" />
@@ -230,7 +230,7 @@
             </HBox>
             <HBox alignment="CENTER" spacing="120.0">
                <children>
-                  <Button fx:id="btnThemTTCongNhan" mnemonicParsing="false" prefHeight="30.0" prefWidth="94.0" text="Thêm">
+                  <Button fx:id="btnThemTTCongNhan" mnemonicParsing="false" onAction="#themTTCongNhan" prefHeight="30.0" prefWidth="94.0" text="Thêm">
                      <graphic>
                         <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -239,7 +239,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button fx:id="btnLamMoiTTCongNhan" mnemonicParsing="false" prefHeight="30.0" prefWidth="94.0" text="Làm mới">
+                  <Button fx:id="btnLamMoiTTCongNhan" mnemonicParsing="false" onAction="#xoaTrangTTCongNhan" prefHeight="30.0" prefWidth="94.0" text="Làm mới">
                      <graphic>
                         <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -258,7 +258,7 @@
             </HBox>
             <HBox alignment="CENTER" spacing="120.0">
                <children>
-                  <Button fx:id="btnSuaTTCongNhan" mnemonicParsing="false" prefHeight="30.0" prefWidth="94.0" text="Sửa">
+                  <Button fx:id="btnSuaTTCongNhan" mnemonicParsing="false" onAction="#suaTTCongNhan" prefHeight="30.0" prefWidth="94.0" text="Sửa">
                      <graphic>
                         <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -267,7 +267,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button fx:id="btnXoaTTCongNhan" mnemonicParsing="false" prefHeight="30.0" prefWidth="94.0" text="Xóa">
+                  <Button fx:id="btnXoaTTCongNhan" mnemonicParsing="false" onAction="#xoaTTCongNhan" prefHeight="30.0" prefWidth="94.0" text="Xóa">
                      <graphic>
                         <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -290,7 +290,7 @@
         <bottom>
             <HBox alignment="CENTER_RIGHT" fillHeight="false" spacing="20.0" BorderPane.alignment="CENTER">
                 <children>
-                    <Button fx:id="btnResetTTCongNhan" mnemonicParsing="false" prefHeight="30.0" prefWidth="94.0" text="Reset">
+                    <Button fx:id="btnResetTTCongNhan" mnemonicParsing="false" onAction="#resetBangTTCongNhan" prefHeight="30.0" prefWidth="94.0" text="Reset">
                         <graphic>
                             <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                                 <image>
@@ -299,7 +299,7 @@
                             </ImageView>
                         </graphic>
                     </Button>
-                    <Button fx:id="btnLuuTTCongNhan" mnemonicParsing="false" prefHeight="30.0" prefWidth="94.0" text="Lưu">
+                    <Button fx:id="btnLuuTTCongNhan" mnemonicParsing="false" onAction="#luuTTCongNhan" prefHeight="30.0" prefWidth="94.0" text="Lưu">
                         <graphic>
                             <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                                 <image>
