--- a/src/main/resources/com/openjfx/qllspahg/fxml/CongNhan/ChamCongCongNhan.fxml
+++ b/src/main/resources/com/openjfx/qllspahg/fxml/CongNhan/ChamCongCongNhan.fxml
@@ -21,13 +21,14 @@
                 <content>
                     <TableView editable="true" tableMenuButtonVisible="true">
                         <columns>
-                            <TableColumn prefWidth="85.59999996423721" text="Mã công nhân" />
-                            <TableColumn prefWidth="190.40005493164062" text="Họ và tên" />
-                            <TableColumn prefWidth="135.199951171875" text="Phòng ban" />
-                            <TableColumn prefWidth="151.20001220703125" text="Ngày chấm công" />
-                              <TableColumn prefWidth="141.5999755859375" text="Số sản phẩm làm" />
-                  <TableColumn prefWidth="129.5999755859375" text="Nghỉ phép" />
-                              <TableColumn prefWidth="129.5999755859375" text="Số lượng làm tăng ca" />
+                  <TableColumn fx:id="colSTTChamCongCN" prefWidth="115.0" text="Số thứ tự" />
+                            <TableColumn fx:id="colMaCN" prefWidth="115.0" text="Mã công nhân" />
+                            <TableColumn fx:id="colHoVaTen" prefWidth="162.0" text="Họ và tên" />
+                            <TableColumn fx:id="colToSanXuat" prefWidth="153.0" text="Tổ sản xuất" />
+                            <TableColumn fx:id="colNgayChamCong" prefWidth="135.0" text="Ngày chấm công" />
+                              <TableColumn fx:id="colSoLuongLam" prefWidth="169.0" text="Số lượng làm hành chính " />
+                              <TableColumn fx:id="colSoLuongLamTangCa" prefWidth="143.0" text="Số lượng làm tăng ca" />
+                  <TableColumn fx:id="colNghiPhep" prefWidth="90.0" text="Nghỉ phép" />
                         </columns>
                     </TableView>
                 </content>
@@ -41,7 +42,7 @@
                             <HBox alignment="CENTER" spacing="10.0">
                                 <children>
                                     <Label text="Mã công nhân" />
-                                    <TextField fx:id="tfMaCN" prefHeight="26.0" prefWidth="152.0" />
+                                    <TextField fx:id="tfLocMaCN" prefHeight="26.0" prefWidth="152.0" />
                                 </children>
                                 <padding>
                                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -50,7 +51,7 @@
                             <HBox alignment="CENTER" spacing="10.0">
                                 <children>
                                     <Label text="Tên công nhân" />
-                                    <TextField fx:id="tfHoTenCN" prefHeight="26.0" prefWidth="152.0" />
+                                    <TextField fx:id="tfLocHoTenCN" prefHeight="26.0" prefWidth="152.0" />
                                 </children>
                                 <padding>
                                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -67,14 +68,14 @@
                             </HBox>
                             <HBox alignment="CENTER" prefHeight="30.0" prefWidth="270.0" spacing="10.0">
                                 <children>
-                                    <Label text="Phòng ban: " />
-                                    <ComboBox fx:id="cbxPhongBan" prefHeight="26.0" prefWidth="154.0" />
+                                    <Label text="Tổ sản xuất: " />
+                                    <ComboBox fx:id="cbxLocToSanXuat" prefHeight="26.0" prefWidth="154.0" />
                                 </children>
                                 <padding>
                                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                 </padding>
                             </HBox>
-                            <Button mnemonicParsing="false" text="Lấy dữ liệu " />
+                            <Button mnemonicParsing="false" onAction="#layDuLieuLocChamCongCongNhan" text="Lấy dữ liệu " />
                         </children>
                         <VBox.margin>
                             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -92,7 +93,7 @@
         <bottom>
             <HBox alignment="CENTER_RIGHT" fillHeight="false" spacing="20.0" BorderPane.alignment="CENTER">
                 <children>
-                    <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="94.0" text="Reset">
+                    <Button mnemonicParsing="false" onAction="#lamMoiDuLieuTableView" prefHeight="30.0" prefWidth="94.0" text="Reset">
                         <graphic>
                             <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                                 <image>
@@ -101,7 +102,7 @@
                             </ImageView>
                         </graphic>
                     </Button>
-                    <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="94.0" text="Lưu">
+                    <Button mnemonicParsing="false" onAction="#luuBangChamCongCongNhan" prefHeight="30.0" prefWidth="94.0" text="Lưu">
                         <graphic>
                             <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                                 <image>
@@ -110,6 +111,15 @@
                             </ImageView>
                         </graphic>
                     </Button>
+            <Button mnemonicParsing="false" onAction="#aaTest" prefHeight="30.0" prefWidth="94.0" text="temp">
+               <graphic>
+                  <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/icons/reset-removebg-preview.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
                 </children>
                 <padding>
                     <Insets bottom="5.0" left="5.0" right="20.0" top="10.0" />
