--- a/src/main/resources/com/openjfx/qllspahg/fxml/SanPham/QuanLySanPham.fxml
+++ b/src/main/resources/com/openjfx/qllspahg/fxml/SanPham/QuanLySanPham.fxml
@@ -28,6 +28,9 @@
                      <font>
                         <Font name="System Bold" size="16.0" />
                      </font>
+                     <padding>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </padding>
                   </Label>
                   <HBox alignment="CENTER_LEFT" spacing="10.0">
                      <children>
